--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
     "expo": "~46.0.9",
+    "expo-camera": "^12.3.0",
+    "expo-file-system": "~14.1.0",
+    "expo-image-picker": "^13.3.1",
     "expo-status-bar": "~1.4.0",
+    "image-to-base64": "^2.2.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-document-picker": "^8.1.1",
+    "react-native-fs": "^2.20.0",
+    "react-native-image-base64": "^0.1.4",
+    "react-native-image-picker": "^4.10.0",
+    "react-native-paper": "^4.12.4",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
