--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-native": "0.69.5",
     "react-native-document-picker": "^8.1.1",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.6.0",
     "react-native-image-base64": "^0.1.4",
     "react-native-image-picker": "^4.10.0",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-navigation": "^4.4.4",
     "react-redux": "^8.0.2"
   },
   "devDependencies": {
