--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "@reduxjs/toolkit": "^1.8.5",
@@ -19,6 +20,7 @@
     "expo-image-picker": "^13.3.1",
     "expo-status-bar": "~1.4.0",
     "image-to-base64": "^2.2.0",
+    "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-document-picker": "^8.1.1",
