--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-screens": "^3.17.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
