--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.1",
+    "@react-navigation/drawer": "^6.5.6",
+    "@react-navigation/material-bottom-tabs": "^6.2.9",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "expo": "~46.0.9",
+    "expo-av": "~12.0.4",
     "expo-camera": "^12.3.0",
     "expo-file-system": "~14.1.0",
     "expo-image-picker": "^13.3.1",
@@ -25,13 +29,15 @@
     "react-native": "0.69.5",
     "react-native-document-picker": "^8.1.1",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.6.0",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-image-base64": "^0.1.4",
     "react-native-image-converter": "^0.4.2",
     "react-native-image-picker": "^4.10.0",
     "react-native-paper": "^4.12.4",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
+    "react-native-swiper-flatlist": "^3.0.18",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.2",
