--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-image-base64": "^0.1.4",
     "react-native-image-converter": "^0.4.2",
     "react-native-image-picker": "^4.10.0",
+    "react-native-modalize": "^2.1.1",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "^4.3.3",
