--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "mobile",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "4.0.0",
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.5.1",
     "@react-navigation/drawer": "^6.5.6",
@@ -17,16 +17,19 @@
     "@react-navigation/native-stack": "^6.8.0",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
-    "expo": "~46.0.9",
+    "expo": "~46.0.17",
     "expo-av": "~12.0.4",
     "expo-camera": "^12.3.0",
+    "expo-dev-client": "~1.3.1",
     "expo-file-system": "~14.1.0",
     "expo-image-picker": "^13.3.1",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "image-to-base64": "^2.2.0",
     "moment": "^2.29.4",
     "react": "18.0.0",
-    "react-native": "0.69.5",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
     "react-native-document-picker": "^8.1.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.5.0",
@@ -40,9 +43,12 @@
     "react-native-screens": "^3.17.0",
     "react-native-swiper-flatlist": "^3.0.18",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7",
+    "react-native-webrtc": "1.100.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.2",
-    "socket.io-client": "^4.5.4"
+    "socket.io-client": "^4.5.4",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
